Use citypy.org CNAME.

--- a/_config.yml
+++ b/_config.yml
@@ -9,7 +9,7 @@ author :
   github : citypy
   twitter : citypyorg
 
-production_url : http://citypy.github.com
+production_url : http://citypy.org
   
 JB:
   # Theme grabbed from JekyllBootstrap 0.2.0
